--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "stranger-talks",
   "version": "1.0.0",
   "description": "Stranger Talks Application",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "concurrently \"npm run start --prefix client\" \"nodemon app --prefix server\"",
+    "dev": "concurrently \"npm run start --prefix client\" \"nodemon app\"",
+    "build": "cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,18 @@
   ],
   "author": "G. Nitish",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "node-cache": "^5.1.2",
+    "socket.io": "^4.4.1"
+  },
+  "engines": {
+    "node": "16.13.2"
+  },
   "bugs": {
     "url": "https://github.com/Nitish0399/stranger-talks/issues"
   },
