--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "stranger-talks",
   "version": "1.0.0",
   "description": "Stranger Talks Application",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "concurrently \"npm run start --prefix client\" \"nodemon app\"",
+    "dev": "concurrently \"npm run start --prefix client\" \"nodemon server\"",
     "build": "cd client && npm install && npm run build",
-    "start": "node app",
+    "start": "node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "node-cache": "^5.1.2",
     "socket.io": "^4.4.1"
