--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "axios": "^0.27.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "node-cache": "^5.1.2",
