--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "node-cache": "^5.1.2",
+    "request-ip": "^2.1.3",
     "socket.io": "^4.4.1"
   },
   "engines": {
