--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "node-cache": "^5.1.2",
+    "nodemailer": "^6.7.5",
     "request-ip": "^2.1.3",
     "socket.io": "^4.4.1"
   },
